refactor(model-ad): restore the filtering logic for conflict resolution